# PDF-Interpreter-Enterprise-Accelerator

./: AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_REQUIREMENTS.md  README.md  pyproject.toml
configs/: base.yaml
docs/: architecture.md  onboarding.md
models/: pdf_interpreter_model.joblib  renewal_model.joblib
reports/: pdf_interpreter_metrics.json  pdf_interpreter_predictions.csv  renewal_metrics.json  renewal_predictions.csv
src/enterprise_data_science_accelerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/enterprise_ds/: cli.py  config.py  data.py  modeling.py  train.py
src/pdf_interpreter_enterprise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_data.py  test_training.py
